# finclaw

./: Dockerfile  finclaw.py  functions.sh  mcp_server.py  pyproject.toml  streaming_mcp_client.py  streaming_mcp_server.py
charts/finclaw/: values.yaml
charts/finclaw/templates/: deployment.yaml
finance/twelvedata/: historical_data.py
src/finclaw/: __init__.py  cli.py  server.py
src/finclaw/ai/: langchain.py
src/finclaw/finance/: yfinance_claw.py  yfinance_utils.py
src/finclaw/social/: SOCIAL.md  trump_utils.py
src/finclaw/tools/: __init__.py  trump_tools.py  yfinance_tools.py
src/finclaw/utils/: mongo.py
