[project]
name = "finclaw"
version = "0.1.0"
dependencies = [
	"mcp[cli]>=1.26.0",
	"pandas>=3.0.1",
	"pymongo>=4.16.0",
	"requests>=2.32.5",
	"typer",
	"yfinance>=1.2.0",
	"langchain>=1.2.12",
	"langchain-core>=1.2.19",
	"langchain-community>=0.4.1",
	"langchain-mcp-adapters>=0.2.2",
	"langchain-anthropic>=1.3.5",
	"langchain-openai>=1.1.11",
	"langchain-xai>=1.2.2",
	"langchain-google-genai>=3.2.2",
	"langchain-deepseek>=1.0.1",
]
